# SyclBench

./: .gitcredential  .gitignore  CMakeLists.txt  ComputeCPPInstall.sh  README.md  SetupBenches.sh  run-suite
Results/RawData/: [TEST1]sycl-bench.csv  [TEST2]sycl-bench.csv  [TEST3]sycl-bench.csv  [TEST4]sycl-bench.csv  [TEST5]sycl-bench.csv  [TEST6]sycl-bench.csv  [TEST7]sycl-bench.csv
samples/: matrix-multiply.cpp
single-kernel/: median.cpp  sobel.cpp  sobel5.cpp  sobel7.cpp
